Fix formatting in index.sass; adjust spacing for main section

--- a/frontend/src/assets/sass/index.sass
+++ b/frontend/src/assets/sass/index.sass
@@ -32,7 +32,9 @@ header
 
 
 main
+    
     margin-block: 5em
+    min-block-size: 38vh
 
     @import './main/article.sass'
 
